--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -17,13 +17,12 @@
  
         <td><%= link_to 'Show', category_path(category) %></td>
         <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <%
-=begin%>
- <td><%= link_to 'Destroy', category_path(category), method: :delete, data: { confirm: 'Are you sure?' } %></td>  
-<%
-=end%>
+        <td><%= link_to 'Destroy', category_path(category), method: :delete, data: { confirm: 'Are you sure?' } %></td>  
+
 
       </tr>
     <% end %>
   </tbody>
 </table>
+
+<%= link_to 'Add', new_category_path %>
